prevent annoyance where adjusting the volume on mobile will select the slider sometimes
Former-commit-id: b08ca889bdc23c30f3f0c32b11f410db4e2ca647

--- a/app/src/component/currently_playing/currently_playing.css
+++ b/app/src/component/currently_playing/currently_playing.css
@@ -8,3 +8,12 @@ input.volume {
     padding-left: 20px !important;
     padding-right: 25px !important;
 }
+
+/* prevent annoyance where adjusting the volume on mobile will select the slider sometimes */
+.volume-container {
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}
